--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["paulaanb <<>>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 cryptography = "^37.0.2"
+pandas = "^1.4.2"
 
 [tool.poetry.dev-dependencies]
 
