--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["paulaanb <<>>"]
 python = "^3.8"
 cryptography = "^37.0.2"
 pandas = "^1.4.2"
+numpy = "^1.22.3"
+numpy1 = "^0.0.1"
 
 [tool.poetry.dev-dependencies]
 
